...
import pt.isel.gomoku.ui.common.theme.DARK_BROWN
import pt.isel.gomoku.ui.common.theme.GomokuTheme

/**
 * Tags used to identify the components of the Top Bar of Auth Screen in automated tests.
 */
const val TEST_TAG_TOP_BAR_AUTH_NAVIGATE_BACK = "TEST_TAG_TOP_BAR_AUTH_NAVIGATE_BACK"
const val TEST_TAG_TOP_BAR_AUTH_NAVIGATE_SIGNUP = "TEST_TAG_TOP_BAR_AUTH_NAVIGATE_SIGNUP"

/**
 * Composable top bar of auth screen.
 */
@OptIn(ExperimentalMaterial3Api::class)
@Composable
...
